# phonnx

./: .gitignore  LICENSE  README.md  pyproject.toml
phonnx/: __init__.py  col_preprocessors.py  constants.py  runtime.py
phonnx/clients/: rest.py
phonnx/cuops/: __init__.py
phonnx/cuops/llm/: gpt_chat_completion.py  universal_text_completion.py  universal_text_embedding.py  vertex_chat_completion.py
phonnx/cuops/strings/: json_extractor.py  string_formatter.py
phonnx/utils/: cuops.py  onnx_parsing.py  types.py
tests/: test_col_preprocessors.py  test_runtime.py  test_utils_cuops.py  test_utils_parsing.py
tests/tests_cuops/: test_gpt_chat_compl.py  test_json_extractor.py  test_string_formatter.py  test_universal_text_compl.py  test_universal_text_emb.py  test_vertex_chat_compl.py
