[build-system]

requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
dependencies = [
"numpy>=1.18.0",
"onnx>=1.12.0",
"onnxruntime>=1.12.1",
]
name = "phonnx"
version = "0.1.0"
authors = [
  { name="Oleh Kostromin", email="kostromin97@gmail.com" },
  { name="Iryna Kondrashchenko", email="iryna230520@gmail.com" },
]
description = "Python Hypercharged ONNX Runtime."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
